// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Player Empty 1`] = `
<section
  class="storybook-snapshot-container"
>
  <audio
    autoplay=""
    class="svelte-5j1b4y"
  />
   
  <div
    class="flex items-center svelte-5j1b4y"
  >
    <span
      class="current svelte-5j1b4y"
    />
     
    <div
      class="player svelte-5j1b4y"
    >
      <span
        class="controls svelte-5j1b4y"
      >
        <button
          class="mx-1 svelte-u16ygp iconOnly noBorder"
        >
          <i
            class="material-icons svelte-u16ygp"
          >
            skip_previous
          </i>
           
        </button>
         
        <button
          class="mx-1 svelte-u16ygp iconOnly large"
        >
          <i
            class="material-icons svelte-u16ygp"
          >
            play_arrow
          </i>
           
        </button>
         
        <button
          class="mx-1 svelte-u16ygp iconOnly noBorder"
        >
          <i
            class="material-icons svelte-u16ygp"
          >
            skip_next
          </i>
           
        </button>
      </span>
       
      <span
        class="controls time svelte-5j1b4y"
      >
        <span
          class="svelte-5j1b4y"
        >
          0:00
        </span>
         
        <div
          class="wrapper w-full svelte-1cq2dg8"
        >
          <input
            class="w-full svelte-1cq2dg8"
            max="0"
            min="0"
            type="range"
          />
           
          <div
            class="sliderTrack svelte-1cq2dg8"
          >
            <span
              class="progress svelte-1cq2dg8"
              style="right:100%"
            />
          </div>
        </div>
         
        <span
          class="svelte-5j1b4y"
        >
          0:00
        </span>
      </span>
    </div>
     
    <span
      class="playlist svelte-5j1b4y"
    >
      <button
        class="mx-1 svelte-u16ygp iconOnly large"
      >
        <i
          class="material-icons svelte-u16ygp"
        >
          queue_music
        </i>
         
      </button>
    </span>
  </div>
</section>
`;

exports[`Storyshots Components/Player With Track List 1`] = `
<section
  class="storybook-snapshot-container"
>
  <audio
    autoplay=""
    class="svelte-5j1b4y"
    src="./no-duration.mp3"
  />
   
  <div
    class="flex items-center svelte-5j1b4y"
  >
    <span
      class="current svelte-5j1b4y"
    >
      <div
        class="root svelte-r59qz"
      >
        <img
          alt="./# Films/cover.jpg"
          class="h-16 w-16 flex-none svelte-1k7rixd"
          loading="lazy"
          src="./%23 Films/cover.jpg"
        />
         
        <div
          class="track svelte-r59qz"
        >
          <span
            class="title svelte-r59qz"
          >
            file 1
          </span>
           
          <span
            class="artist svelte-r59qz"
          >
            Someone
          </span>
        </div>
         
      </div>
    </span>
     
    <div
      class="player svelte-5j1b4y"
    >
      <span
        class="controls svelte-5j1b4y"
      >
        <button
          class="mx-1 svelte-u16ygp iconOnly noBorder"
        >
          <i
            class="material-icons svelte-u16ygp"
          >
            skip_previous
          </i>
           
        </button>
         
        <button
          class="mx-1 svelte-u16ygp iconOnly large"
        >
          <i
            class="material-icons svelte-u16ygp"
          >
            play_arrow
          </i>
           
        </button>
         
        <button
          class="mx-1 svelte-u16ygp iconOnly noBorder"
        >
          <i
            class="material-icons svelte-u16ygp"
          >
            skip_next
          </i>
           
        </button>
      </span>
       
      <span
        class="controls time svelte-5j1b4y"
      >
        <span
          class="svelte-5j1b4y"
        >
          0:00
        </span>
         
        <div
          class="wrapper w-full svelte-1cq2dg8"
        >
          <input
            class="w-full svelte-1cq2dg8"
            max="0"
            min="0"
            type="range"
          />
           
          <div
            class="sliderTrack svelte-1cq2dg8"
          >
            <span
              class="progress svelte-1cq2dg8"
              style="right:100%"
            />
          </div>
        </div>
         
        <span
          class="svelte-5j1b4y"
        >
          0:00
        </span>
      </span>
    </div>
     
    <span
      class="playlist svelte-5j1b4y"
    >
      <button
        class="mx-1 svelte-u16ygp iconOnly large"
      >
        <i
          class="material-icons svelte-u16ygp"
        >
          queue_music
        </i>
         
      </button>
    </span>
  </div>
</section>
`;
